deployment/kubernetes-basic-setup/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service
  namespace: price-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service
  template:
    metadata:
      labels:
        app: service
    spec:
      containers:
        - name: service
          image: price-provider-service:0.0.0-SNAPSHOT
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /public/actuator/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: price-provider
spec:
  selector:
    app: service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
